Add teams endpoints.
