# server/endpoints/v1/categories/request-schema.js
@@ -1,19 +1,21 @@
 const Joi = require('joi');
 const {
-	categoryName,
-	pointValue,
-	pointShape,
+  categoryName,
+  pointValue,
+  pointShape,
+  objectIdInRequest,
 } = require('../../../libs/common-schemas');
 
 const allCategories = {
-	GET: Joi.object({}),
-	POST: Joi.object({
-		categoryName,
-		pointValue,
-		pointShape,
-	}),
+  GET: Joi.object({}),
+  POST: Joi.object({
+    eventId: objectIdInRequest.required(),
+    categoryName: categoryName.required(),
+    pointValue: pointValue.required(),
+    pointShape: pointShape.required(),
+  }),
 };
 
 module.exports = {
-	allCategories,
+  allCategories,
 };
